Removed more issues shown in SonarQube
Commiting the portfolio changes caused the report to update, showing the
smells/bugs still in this version. Fixed all smells classed "Major" or
higher, except the "too many arguments" complaint.